<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DemoApp</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By Anagha Sambhaji Bagul </string>

    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!-- Strings for Dashboard -->

    <!-- Categories -->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="eduction">Education</string>
    <string name="airports">Airports</string>

    <!-- Titles and Descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <!-- Navigation Title -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="hospitals">Hospitals</string>

    <!-- Retailer panel strings -->
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="sign_up">Sign Up</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>

    <!-- OTP Screen strings -->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+9967776749</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want reset password!</string>
    <string name="make_selection_detail">Select which contact details should we use to reset your password?</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">via sms</string>
    <string name="via_email">via mail</string>
    <string name="new_credentials">New Credentials</string>
    <string name="set_password_detail">Your identity has been varified! Set your new password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success_message">Your Password has been Updated!</string>
    <string name="partnerKey">uwTFX1b562d8e3fa34425bee82dc20a5e8a9e</string>


</resources>