<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.MakeSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/general_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/make_selection_detail"
            android:textSize="18sp" />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="180dp"
           android:layout_marginTop="50dp"
           android:background="@color/lightWhite"
           android:padding="10dp">
           <ImageView
               android:id="@+id/mobile_icon"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:src="@drawable/mobile_custom_icon"
               android:layout_centerVertical="true"
               android:layout_marginRight="20dp"/>

           <TextView
               android:id="@+id/mobile_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/muli"
               android:text="@string/via_sms"
               android:textSize="25sp"
               android:layout_toRightOf="@id/mobile_icon"
               android:layout_marginTop="35dp"/>

           <TextView
               android:id="@+id/mobile_des"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/muli"
               android:text="+93223214234"
               android:textColor="@color/black"
               android:textSize="25sp"
               android:layout_below="@id/mobile_title"
               android:layout_toRightOf="@id/mobile_icon" />

           <Button
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#00000000"/>
       </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">
            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/email_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/via_email"
                android:textSize="25sp"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mail_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="abcd@gmail.com"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_below="@id/mail_title"
                android:layout_toRightOf="@id/mail_icon" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </RelativeLayout>
          
    </LinearLayout>

</ScrollView>